<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="download_site">Download site</string>
    <string name="type">Picture Type:</string>
    <string name="color">Picture Color:</string>
    <string name="size">Picture Size</string>
    <string name="title_activity_picture_size">PictureSizeActivity</string>
    <string name="textsmall">Small</string>
    <string name="textmedium">Medium</string>
    <string name="textlarge">Large</string>
    <string name="texthuge">Huge</string>
    <string name="textanysize">Any size</string>
    <string name="none_set">None set</string>
    <string name="title_activity_picture_color">PictureColorActivity</string>
    <string name="picture_color">Select picture color:</string>
    <string name="textBlack">Black</string>
    <string name="textBlue">Blue</string>
    <string name="textAnyColor">Any Color</string>
    <string name="textBrown">Brown</string>
    <string name="textGray">Gray</string>
    <string name="textGreen">Green</string>
    <string name="textOrange">Orange</string>
    <string name="textPink">Pink</string>
    <string name="textPurple">Purple</string>
    <string name="textRed">Red</string>
    <string name="textTeal">Teal</string>
    <string name="textWhite">White</string>
    <string name="textYellow">Yellow</string>
    <string name="title_activity_picture_type">Picture Type</string>
    <string name="picturetype">Select picture type:</string>
    <string name="picture_size">Select Picture size:</string>
    <string name="textFace">Face</string>
    <string name="textPhoto">Photo</string>
    <string name="textAnyType">Any Type</string>
    <string name="textClipArt">Clip Art</string>
    <string name="textLineArt">Line Art</string>
    <string name="title_activity_advanced_search">Advanced Search</string>
    <string name="advance_search_opts">Advanced search options</string>
    <string name="imageSize">Image size</string>
    <string name="imageType">Image type</string>
    <string name="colorFilter">Color filter</string>
    <string name="siteFilter">Site filter</string>
    <string name="save">Save</string>
    <string name="advOpts">Advanced Search</string>
    <string name="query_hint">enter query</string>
    <string name="no_internet_errmsg">Error: No connection to the internet.</string>

    <string-array name="image_type">
        <item>all types</item>
        <item>face</item>
        <item>photo</item>
        <item>clip art</item>
        <item>line art</item>
    </string-array>

    <string-array name="image_color">
        <item>all colors</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="image_size">
        <item>all sizes</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>huge</item>
    </string-array>

</resources>
